--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 </select>
             </div>
 
-            <input type="submit"  onclick="validateForm()">
+            <input type="submit" value="predict" onclick="validateForm()">
         </form>
 
         <div id="final-result">
