--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <body>
     <div class="container">
         <h1>Diamond Price Predictor</h1>
-        <form  method="POST">
+        <form action="{{url_for('predict_datapoint')}}" method="POST">
             <div class="form-group">
                 <label for="carat">Carat:</label>
                 <input type="text" id="carat" name="carat" placeholder="Enter carat value (float)" required>
